--- a/gradle.properties
+++ b/gradle.properties
@@ -42,7 +42,7 @@ mod_name=Enchanting Colors
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.1.1
+mod_version=1.1.2
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -50,4 +50,4 @@ mod_group_id=com.tallonkh
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=tallonkh
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Enchanted books are colored based on their enchantments.
+mod_description=Enchanted books are colored based on their enchantments!
